# hegel-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  build.rs  flake.nix  justfile
.claude/: CLAUDE.md
.github/: coverage-ratchet.json
.github/scripts/: bump_hegel_core.py  release.py
.github/workflows/: bump-hegel-core.yml  ci.yml
docs/: getting-started.md  installation.md
examples/: ledger.rs  min_stack.rs  stack.rs
hegel-derive/src/: enum_gen.rs  given.rs  lib.rs  struct_gen.rs
hegel-macros/: Cargo.toml
hegel-macros/src/: enum_gen.rs  hegel_main.rs  hegel_test.rs  lib.rs  stateful.rs  utils.rs
nix/: flake.nix
scripts/: check-coverage.py
src/: antithesis.rs  backend.rs  cli.rs  embedded.rs  lib.rs  protocol.rs  run_lifecycle.rs  runner.rs  stateful.rs  test_case.rs  utils.rs  uv.rs
src/generators/: collections.rs  combinators.rs  compose.rs  default.rs  deferred.rs  given_param.rs  mod.rs  (+5 more)
tests/: SHRINK_TEST_PORT_NOTES.md  floats.rs  integers.rs  test_antithesis.rs  test_bad_server_command.rs  test_collections.rs  test_combinators.rs  test_compilation_edge_cases.rs  test_composite.rs  test_custom_runner.rs  test_default.rs  test_deferred.rs  test_derive.rs  test_derive_compile.rs  test_draw_named.rs  test_explicit_test_case.rs  test_floats.rs  test_given.rs  test_health_check.rs  test_hegel_test.rs  test_install_errors.rs  test_integers.rs  test_internal_errors.rs  test_output.rs  test_quality.rs  test_standard_generators.rs  test_stateful.rs  test_strings.rs  test_targeting.rs  test_threading.rs  test_time.rs  test_tuples.rs
(+40 files in other folders)
