[package]
name = "hegel"
version = "0.1.0"
edition = "2021"
# if you bump this, also bump ci.yml and hegel-derive/cargo.toml
rust-version = "1.68"
description = "Property-based testing SDK for the Hegel test data generator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/antithesishq/hegel-rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# float_roundtrip fixes parsing of floats like "0.9999999999999999"
# See: https://github.com/serde-rs/json/issues/1303
serde_json = { version = "1.0", features = ["float_roundtrip"] }
num = "0.4"
paste = "1.0"
hegel-derive = { path = "hegel-derive" }
tempfile = "3.0"
rand = { version = "0.9", optional = true }
# Binary protocol support
ciborium = "0.2"
crc32fast = "1.4"

[dev-dependencies]
regex = "1.0"
rand = "0.9"

[features]
default = []
rand = ["dep:rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
